tests/cudn_bad_test_1/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: red
  labels:
    name: red
    k8s.ovn.org/primary-user-defined-network: ""
