tests/cudn_bad_test_1/pod_and_policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: red
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-red
  namespace: red
  labels:
    network: red
    purpose: kubecon-eu-2025-demo
spec:
  selector:
    matchLabels:
        network: red
        purpose: kubecon-eu-2025-demo
  replicas: 2
  template:
    metadata:
      labels:
        network: red
        purpose: kubecon-eu-2025-demo
    spec:
      containers:
      - args:
        - netexec
        - --http-port=8080
        - --udp-port=-1
        image: k8s.gcr.io/e2e-test-images/agnhost:2.45
        imagePullPolicy: IfNotPresent
        name: agnhost-container-8080
      - args:
        - netexec
        - --http-port=9090
        - --udp-port=-1
        image: k8s.gcr.io/e2e-test-images/agnhost:2.45
        imagePullPolicy: IfNotPresent
        name: agnhost-container-9090
